fixed issue with modals being covered by hamburger menu

--- a/fireflight/src/styles/_register.scss
+++ b/fireflight/src/styles/_register.scss
@@ -7,8 +7,8 @@
     position: absolute;
     width: 34rem;
     height: auto;
-    left: -2.5rem;
-    top: 0rem;
+    left: -2rem;
+    top: 2.5rem;
     background: #ffffff;
     border-radius: 1px;
   }
